style.css
* {
  /* font-family: "Orbitron"; */
  color:white;
  font-family: 'Montserrat';
  list-style-type: none;
  /* Change on theme change */
  -webkit-transition-property: all;
  -webkit-transition-duration: .1s;
  -moz-transition-timing-function: cubic-bezier(100, 50, 21, 6);
  -moz-transition-property: all;
  -moz-transition-timing-function: cubic-bezier(100, 50, 21, 6)  
  /* color: #64ffda; */
}

html {
  scroll-behavior: smooth;
}

body {
  font-size: 1.125rem;

}
#hero__name {
  color:rgb(228, 107, 102) !important;
}

.primary  {
  color:rgb(228, 107, 102) !important;
}

.secondary {
  color: #495670 !important;
}

a {
  text-decoration: none;
  color: white;
}

h1 {
  font-size: 8vh;
}

h2 {
  font-size: 6vh;
}

h3 {
  font-size: 4vh;
}

#brand-name {
  font-size: 5vh;
}

#hero-image {
  height: 100vh;
  width: 100%;
  object-fit: cover;
  object-position: center;
  opacity: 0.75;
}

.hero-section {
  background-color: black;
  overflow: hidden;
  padding:auto;
}

#hero-sm__text {
  margin: auto 1rem;
  padding: auto;
  height: 50vh;
  width: 40vw;
}

.occ {
  /* font-size: 7.5vh; */
  font-family: "Monoton";
}

#occ-sm {
  font-family: "Monoton";
}

.section__title, .chapter__title, .subchapter__title {
  background-color: white;
}

.section__title {
  font-size: 3.25rem;
  padding: auto;
}
/* .section__title { */
  /* Change on theme */
  /* Change on theme */
  /* color: #64ffda!important; */
/* } */

.nav-right-item:hover {
  color: rgb(228, 107, 102) !important;
}
/* font-family: 'Orbitron'; */

/* } */

/* .nav-right-link {
  color: red;
} */

.side-nav-right, .side-nav-left {
  padding: 2rem;
  z-index: 1000;
}

.sticky-top {
  z-index: 100;
}

.chapter {
  min-height: 90vh;
  margin: auto 10rem;
}

.nav__icon {
  height: 7vh;
  /* width: 3rem; */
  /* change on theme change */
  background-color: #495670;
  margin: 1vw;
  border-radius: 50px;
  border: 1px solid;
}

.nav__icon:hover {
  animation-duration: 1.5s;
  animation-fill-mode: both;
  animation-name: resizing;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
  background-color: rgb(228, 107, 102);
  border:rgb(228, 107, 102) 1px solid;
}

@keyframes resizing {
  25% {
    transform: scalex(1.5) scaley(1.50);
  }
  50% {
    transform: scalex(1.25) scaley(1.25)
  }
  25% {
    transform: scalex(1.5) scaley(1.50);
  }
}

@keyframes falling {
  0% {
    transform: translateY(-5vh) scalex(1);
    animation-timing-function: cubic-bezier(.66, .0, 1, .72);
  }
  45% {
    transform: translateY(3.2vh) scalex(1);
  }
  50% {
    transform: translateY(1.7vh) scalex(1.3);
  }
  70% {
    transform: translateY(1vh) scalex(1);
  }
  80% {
    transform: translateY(1.5vh) scalex(1);
  }
  85% {
    transform: translateY(1.2vh) scalex(1.2);
  }
  93% {
    transform: translateY(1.0vh) scalex(1.1);
  }
  100% {
    transform: translateY(1.0vh) scalex(1);
  }
}

.drop {
  animation-delay: 1s;
  animation-duration: 2s;
  animation-fill-mode: both;
  animation-name: falling;
  animation-timing-function: linear;
  animation-iteration-count: 1;
}

.project__card {
  padding: auto;
  margin: .5rem;
  width: 25rem; 
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);

}

/* .card-img__project{
} */

#profile-photo {
  max-width: 100%;
  margin:auto;
  height: auto;
  object-position: center;
  object-fit:scale-down;
  border-radius: 35vw;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

#card__about {
  /* Here fore dev */
  /* border: 4px solid grey; */
  margin: 10vh 0;
}

#page-percentage {
  margin-right: 1vw;
  color:rgb(228, 107, 102) !important;
}

.icon {
  height:5rem;
  width:5rem;
  margin: 2rem;
}

